--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,9 +18,9 @@
   "eat-kano": "吃掉小鹿乃",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "标题1",
-  "game-intro1": "介绍1",
-  "game-intro2": "介绍2",
+  "game-title": "仙女婷大作战",
+  "game-intro1": "往死里冲",
+  "game-intro2": "努力冲顶",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
