--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,11 +15,11 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "小赖大作战",
+  "eat-kano": "小赖大作战1",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "小赖大作战",
-  "game-intro1": "小赖想冲顶谈恋爱",
+  "game-title": "小赖大作战1",
+  "game-intro1": "小赖想冲顶谈恋爱1",
   "game-intro2": "努力冲顶",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
